add some papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,61 @@
 
 @string{aps = {American Physical Society,}}
 
+@INPROCEEDINGS{10202338,
+  author={Lee, Sangyun and Hong, Sungjun},
+  booktitle={2023 20th International Conference on Ubiquitous Robots (UR)}, 
+  title={D-TSM: Discriminative Temporal Shift Module for Action Recognition}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={133-136},
+  abstract={Action recognition is one of the representative perception tasks for robot application, but it still remains challenging due to complex temporal dynamics. Although temporal shift module (TSM) has been considered to be one of the best 2D CNN based architecture for temporal modeling, its inherent structural simplicity limits performance and has room for improvement. To mitigate this issue while following TSM's philosophy, this paper presents a variant of TSM, termed as Discriminative TSM (D-TSM), with a focus on capturing dis-criminative features for motion pattern. Going further from the naive shift operation in TSM, our D-TSM explicitly transforms shifted features by applying element-wise subtraction. This simple approach is effective to create discriminative features between adjacent frames with a small extra computational cost and zero parameter. The experiments on Something-Something and Jester datasets demonstrate that our D-TSM outperforms TSM and achieves competitive performance with low FLOPs against other methods.},
+  keywords={},
+  doi={10.1109/UR57808.2023.10202338},
+  ISSN={},
+  month={June},}
+
+@article{lee2022extended,
+  title={Extended Siamese Convolutional Neural Networks for Discriminative Feature Learning},
+  author={Lee, Sangyun and Hong, Sungjun},
+  journal={International Journal of Fuzzy Logic and Intelligent Systems},
+  volume={22},
+  number={4},
+  pages={339--349},
+  year={2022},
+  publisher={Korean Institute of Intelligent Systems},
+  abstract={Siamese convolutional neural networks (SCNNs) has been considered as among the best deep learning architectures for visual object verification. However, these models involve the drawback that each branch extracts features independently without considering the other branch, which sometimes lead to unsatisfactory performance. In this study, we propose a new architecture called an extended SCNN (ESCNN) that addresses this limitation by learning both independent and relative features for a pair of images. ESCNNs also have a feature augmentation architecture that exploits the multi-level features of the underlying SCNN. The results of feature visualization showed that the proposed ESCNN can encode relative and discriminative information for the two input images at multi-level scales. Finally, we applied an ESCNN model to a person verification problem, and the experimental results indicate that the ESCNN achived an accuracy of 97.7%, which outperformed an SCNN model with 91.4% accuracy. The results of ablation studies also showed that a small version of the ESCNN performed 5.6% better than an SCNN model.},
+}
+
+@ARTICLE{8587153,
+  author={Lee, Sangyun and Kim, Euntai},
+  journal={IEEE Access}, 
+  title={Multiple Object Tracking via Feature Pyramid Siamese Networks}, 
+  year={2019},
+  volume={7},
+  number={},
+  pages={8181-8194},
+  abstract={When multiple object tracking (MOT) based on the tracking-by-detection paradigm is implemented, the similarity metric between the current detections and existing tracks plays an essential role. Most of the MOT schemes based on a deep neural network learn the similarity metric using a Siamese architecture, but the plain Siamese architecture might not be enough owing to its structural simplicity and lack of motion information. This paper aims to propose a new MOT scheme to overcome the existing problems in the conventional MOTs. Feature pyramid Siamese network (FPSN) is proposed to address the structural simplicity. The FPSN is inspired by a feature pyramid network (FPN) and it extends the Siamese network by applying FPN to the plain Siamese architecture and by developing a new multi-level discriminative feature. A spatiotemporal motion feature is added to the FPSN to overcome the lack of motion information and to enhance the performance in MOT. Thus, FPSN-MOT considers not only the appearance feature but also motion information. Finally, FPSN-MOT is applied to the public MOT challenge benchmark problems and its performance is compared to that of the other state-of-the-art MOT methods.},
+  keywords={},
+  doi={10.1109/ACCESS.2018.2889442},
+  ISSN={2169-3536},
+  month={},
+}
+
+@article{LEE2017182,
+title = {Robust adaptive synchronization of a class of chaotic systems via fuzzy bilinear observer using projection operator},
+journal = {Information Sciences},
+volume = {402},
+pages = {182-198},
+year = {2017},
+issn = {0020-0255},
+doi = {https://doi.org/10.1016/j.ins.2017.03.004},
+url = {https://www.sciencedirect.com/science/article/pii/S0020025517305777},
+author = {Sangyun Lee and Mignon Park and Jaeho Baek},
+keywords = {Chaos synchronization, Robust adaptive observer, Bilinear system, Takagi–Sugeno fuzzy system, Projection operator},
+abstract = {This study focuses on the problem of robust adaptive synchronization of uncertain bilinear chaotic systems. A Takagi–Sugeno fuzzy bilinear system (TSFBS) is employed herein to describe a bilinear chaotic system. A robust adaptive observer, which estimates the states of the TSFBS, is also developed. Advanced adaptive laws using a projection operator are designed to achieve both the robustness for the external disturbances and the adaptation of unknown system parameters. A comparison with the existing observer shows that the proposed observer can achieve a faster parameter adaptation and a robust synchronization for an uncertain TSFBS with disturbances when the adaptive laws are utilized. The asymptotic stability and the robust performance of the error dynamics are guaranteed by some assumptions and the Lyapunov stability theory. We verify the effectiveness of the proposed scheme using examples of the generalized Lorenz system in various aspects.}
+}
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
