--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,6 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
 @INPROCEEDINGS{10202338,
   author={Lee, Sangyun and Hong, Sungjun},
   booktitle={2023 20th International Conference on Ubiquitous Robots (UR)}, 
@@ -15,7 +13,10 @@
   keywords={},
   doi={10.1109/UR57808.2023.10202338},
   ISSN={},
-  month={June},}
+  month={June},
+  html={https://doi.org/10.1109/UR57808.2023.10202338},
+  bibtex_show={true},
+}
 
 @article{lee2022extended,
   title={Extended Siamese Convolutional Neural Networks for Discriminative Feature Learning},
@@ -27,6 +28,8 @@
   year={2022},
   publisher={Korean Institute of Intelligent Systems},
   abstract={Siamese convolutional neural networks (SCNNs) has been considered as among the best deep learning architectures for visual object verification. However, these models involve the drawback that each branch extracts features independently without considering the other branch, which sometimes lead to unsatisfactory performance. In this study, we propose a new architecture called an extended SCNN (ESCNN) that addresses this limitation by learning both independent and relative features for a pair of images. ESCNNs also have a feature augmentation architecture that exploits the multi-level features of the underlying SCNN. The results of feature visualization showed that the proposed ESCNN can encode relative and discriminative information for the two input images at multi-level scales. Finally, we applied an ESCNN model to a person verification problem, and the experimental results indicate that the ESCNN achived an accuracy of 97.7%, which outperformed an SCNN model with 91.4% accuracy. The results of ablation studies also showed that a small version of the ESCNN performed 5.6% better than an SCNN model.},
+  html={https://doi.org/10.5391/IJFIS.2022.22.4.339},
+  bibtex_show={true},
 }
 
 @ARTICLE{8587153,
@@ -42,6 +45,8 @@
   doi={10.1109/ACCESS.2018.2889442},
   ISSN={2169-3536},
   month={},
+  html={https://doi.org/10.1109/ACCESS.2018.2889442},
+  bibtex_show={true},
 }
 
 @article{LEE2017182,
@@ -55,7 +60,9 @@ doi = {https://doi.org/10.1016/j.ins.2017.03.004},
 url = {https://www.sciencedirect.com/science/article/pii/S0020025517305777},
 author = {Sangyun Lee and Mignon Park and Jaeho Baek},
 keywords = {Chaos synchronization, Robust adaptive observer, Bilinear system, Takagi–Sugeno fuzzy system, Projection operator},
-abstract = {This study focuses on the problem of robust adaptive synchronization of uncertain bilinear chaotic systems. A Takagi–Sugeno fuzzy bilinear system (TSFBS) is employed herein to describe a bilinear chaotic system. A robust adaptive observer, which estimates the states of the TSFBS, is also developed. Advanced adaptive laws using a projection operator are designed to achieve both the robustness for the external disturbances and the adaptation of unknown system parameters. A comparison with the existing observer shows that the proposed observer can achieve a faster parameter adaptation and a robust synchronization for an uncertain TSFBS with disturbances when the adaptive laws are utilized. The asymptotic stability and the robust performance of the error dynamics are guaranteed by some assumptions and the Lyapunov stability theory. We verify the effectiveness of the proposed scheme using examples of the generalized Lorenz system in various aspects.}
+abstract = {This study focuses on the problem of robust adaptive synchronization of uncertain bilinear chaotic systems. A Takagi–Sugeno fuzzy bilinear system (TSFBS) is employed herein to describe a bilinear chaotic system. A robust adaptive observer, which estimates the states of the TSFBS, is also developed. Advanced adaptive laws using a projection operator are designed to achieve both the robustness for the external disturbances and the adaptation of unknown system parameters. A comparison with the existing observer shows that the proposed observer can achieve a faster parameter adaptation and a robust synchronization for an uncertain TSFBS with disturbances when the adaptive laws are utilized. The asymptotic stability and the robust performance of the error dynamics are guaranteed by some assumptions and the Lyapunov stability theory. We verify the effectiveness of the proposed scheme using examples of the generalized Lorenz system in various aspects.},
+html={https://doi.org/10.1016/j.ins.2017.03.004},
+bibtex_show={true},
 }
 
 @book{einstein1956investigations,
