--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,19 @@
 ---
 ---
+@article{RYU2023,
+  title = {Making TSM better: Preserving foundational philosophy for efficient action recognition},
+  journal = {ICT Express},
+  year = {2023},
+  issn = {2405-9595},
+  doi = {https://doi.org/10.1016/j.icte.2023.12.004},
+  url = {https://www.sciencedirect.com/science/article/pii/S2405959523001625},
+  author = {Seok Ryu and Sungjun Hong and Sangyun Lee},
+  keywords = {Action recognition, Gesture recognition, Temporal modeling, Temporal shift module},
+  abstract = {In this study, we present the Discriminative Temporal Shift Module (D-TSM), an enhancement of the Temporal Shift Module (TSM) for action recognition. TSM has limitations in capturing intricate temporal dynamics due to its simplistic feature shifting. D-TSM addresses this by introducing a subtraction operation before the shifting. This enables the extraction of discriminative features between adjacent frames, thereby allowing for effective action recognition where subtle motions serve as crucial cues. It preserves TSM’s foundational philosophy, prioritizing minimal computational overhead and no additional parameters. Our experiments demonstrate that D-TSM significantly improves performance of TSM and outperforms other leading 2D CNN-based methods.},
+  html={https://doi.org/10.1016/j.icte.2023.12.004},
+  bibtex_show={true},
+  selected={true}
+}
 
 @INPROCEEDINGS{10202338,
   author={Lee, Sangyun and Hong, Sungjun},
@@ -47,6 +61,7 @@
   month={},
   html={https://doi.org/10.1109/ACCESS.2018.2889442},
   bibtex_show={true},
+  selected={true}
 }
 
 @article{LEE2017182,
@@ -105,8 +120,7 @@ bibtex_show={true},
   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
   pdf={example_pdf.pdf},
   altmetric={248277},
-  dimensions={true},
-  selected={true}
+  dimensions={true}
 }
 
 @article{einstein1905molekularkinetischen,
