--- a/_news/20231212.md
+++ b/_news/20231212.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-'Making TSM Better: Preserving Foundational Philosophy for Efficient Action Recognition' was accepted for publication in ICT Express!
+:rocket::rocket:'Making TSM Better: Preserving Foundational Philosophy for Efficient Action Recognition' was accepted for publication in ICT Express!
