delete sample news

--- a/_news/20221017.md
+++ b/_news/20221017.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-:sparkles::sparkles:'Extended Siamese Convolutional Neural Networks for Discriminative Feature Learning' was accepted for publication in International Journal of Fuzzy Logic and Intelligent Systems!
+:rocket::rocket:'Extended Siamese Convolutional Neural Networks for Discriminative Feature Learning' was accepted for publication in International Journal of Fuzzy Logic and Intelligent Systems!
