--- a/_news/20230414.md
+++ b/_news/20230414.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-:rocket::rocket:'D-TSM: Discriminative Temporal Shift Module for Action Recognition' was accepted in UR 2023, Hawaii, USA!
+:sparkles::sparkles:'D-TSM: Discriminative Temporal Shift Module for Action Recognition' was accepted in UR 2023, Hawaii, USA!
