--- a/_news/20230501.md
+++ b/_news/20230501.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-:+1::+1:A new project titled '•	Development of Core Technology for Preventing Identity Theft' started in May 2023. This work is supported by the SECUCHART GLOBAL Co., Ltd.
+:+1::+1:A new project titled 'Development of Core Technology for Preventing Identity Theft' started in May 2023. This work is supported by the SECUCHART GLOBAL Co., Ltd.
