--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
   title = {Making TSM better: Preserving foundational philosophy for efficient action recognition},
   journal = {ICT Express},
   year = {2023},
+  month={},
   issn = {2405-9595},
   doi = {https://doi.org/10.1016/j.icte.2023.12.004},
   url = {https://www.sciencedirect.com/science/article/pii/S2405959523001625},
@@ -42,6 +43,7 @@
   number={4},
   pages={339--349},
   year={2022},
+  month={},
   publisher={Korean Institute of Intelligent Systems},
   abstract={Siamese convolutional neural networks (SCNNs) has been considered as among the best deep learning architectures for visual object verification. However, these models involve the drawback that each branch extracts features independently without considering the other branch, which sometimes lead to unsatisfactory performance. In this study, we propose a new architecture called an extended SCNN (ESCNN) that addresses this limitation by learning both independent and relative features for a pair of images. ESCNNs also have a feature augmentation architecture that exploits the multi-level features of the underlying SCNN. The results of feature visualization showed that the proposed ESCNN can encode relative and discriminative information for the two input images at multi-level scales. Finally, we applied an ESCNN model to a person verification problem, and the experimental results indicate that the ESCNN achived an accuracy of 97.7%, which outperformed an SCNN model with 91.4% accuracy. The results of ablation studies also showed that a small version of the ESCNN performed 5.6% better than an SCNN model.},
   html={https://doi.org/10.5391/IJFIS.2022.22.4.339},
