make thumbnail for projects

--- a/_projects/FUN_10K_231119.md
+++ b/_projects/FUN_10K_231119.md
@@ -2,7 +2,7 @@
 layout: page
 title: 2023 SON KEE CHUNG PEACE MARATHON
 description: 10K Personal Best
-img: assets/img/231119_10K.jpg
+img: assets/img/231119_10K_thumbnail.jpg
 importance: 3
 category: fun
 ---
