--- a/_projects/FUN_LOL_231228.md
+++ b/_projects/FUN_LOL_231228.md
@@ -2,8 +2,8 @@
 layout: page
 title: 2023 League of Legends
 description: Rank Personal Best
-img: assets/img/231228_LOL.png
-importance: 3
+img: assets/img/231228_LOL_thumbnail.png
+importance: 4
 category: fun
 ---
 
