--- a/_projects/FUN_LOL_231228.md
+++ b/_projects/FUN_LOL_231228.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: 2023 League of Legends
-description: Rank Personal Best
+title:
+description:
 img: assets/img/231228_LOL_thumbnail.png
 importance: 4
 category: fun
