--- a/_projects/FUN_10K_231119.md
+++ b/_projects/FUN_10K_231119.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 
+title: 10K Marathon
 description: 10K Personal Best
 img: assets/img/231119_10K_thumbnail.jpg
 importance: 3
