--- a/_news/20240801.md
+++ b/_news/20240801.md
@@ -5,6 +5,6 @@ inline: true
 related_posts: false
 ---
 
-:+1::+1:A new project titled 'Commercialization of a One-Stop Smart Solution for Small and Medium Construction Site Management (Scheduling, Safety) Based on Structured and Unstruct' started in Aug 2024. This work is supported by the Technology development Program funded by the Ministry of SMEs and Startups(MSS, Korea).
+:+1::+1:A new project titled 'Commercialization of a One-Stop Smart Solution for Small and Medium Construction Site Management (Scheduling, Safety) Based on Structured and Unstructured Data' started in Aug 2024. This work is supported by the Technology development Program funded by the Ministry of SMEs and Startups(MSS, Korea).
 <br><br>
 :+1::+1:A new project titled 'Making Action Detection Practical: Leveraging 2D CNNs for Real-Time and Online Applications' started in Aug 2024. This work is supported by the Sungkonghoe University Research Grant of 2024.
