--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,24 @@
 ---
 ---
 
+@INPROCEEDINGS{mambavisiontsm,
+  author={Seung Woo Kwak and Sungjun Hong and Sangyun Lee},
+  booktitle={2025 24th International Conference on Electronics, Information, and Communication (ICEIC)}, 
+  title={Making MambaVision Temporal: Leveraging TSM for Efficient Video Understanding}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={},
+  abstract={},
+  keywords={},
+  doi={},
+  ISSN={},
+  month={Jan},
+  html={},
+  bibtex_show={true},
+  preview={mambavisiontsm.png}
+}
+
 @article{RYU2024570,
 title = {Making TSM better: Preserving foundational philosophy for efficient action recognition},
 journal = {ICT Express},
