--- a/_news/20241111.md
+++ b/_news/20241111.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-:sparkles::sparkles:'Making MambaVision Temporal: Leveraging TSM for Efficient Video Understanding' was accepted for presentation in ICEIC 2025, Osaka, JAPAN!
+:sparkles::sparkles:'Making MambaVision Temporal: Leveraging TSM for Efficient Video Understanding' was accepted for presentation in ICEIC 2025, Osaka, Japan!
