--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,26 @@
 ---
 ---
 
+@article{deepcampus,
+title = {Making TSM better: Preserving foundational philosophy for efficient action recognition},
+journal = {The Transactions of the Korean Institute of Electrical Engineers},
+volume = {74},
+number = {1},
+pages = {127-134},
+year = {2025},
+issn = {1975-8359},
+doi = {https://doi.org/10.5370/KIEE.2025.74.1.127},
+url = {https://www.sciencedirect.com/science/article/pii/S2405959523001625},
+author = {Mujae Park and Yun A Kim and Heeju Cha and Sangyun Lee},
+keywords = {Campus tour, Mobile application, Place recognition, Generative models, Commemorative photo},
+abstract = {This study proposes a campus tour mobile application called DeepCampus that leverages deep learning-based vision technologies to enhance user engagement and interaction. The proposed application introduces two core features: a photo mission, where users take photos at designated campus locations, and a commemorative photo creation function that transforms these photos into character-based styles. The photo mission relies on a CNN-based place recognition model, trained on a custom-built campus dataset, to verify mission completion. The commemorative photo creation function uses a diffusion model to generate personalized, stylized photos, providing users with unique records of their campus experience. By integrating place recognition and generative models, the application encourages active exploration. The effectiveness of the proposed system is validated through experiments on the custom dataset, demonstrating its technical reliability and potential to enhance campus tours.},
+html={https://doi.org/10.5370/KIEE.2025.74.1.127},
+bibtex_show={true},
+selected={true},
+preview={deepcampus.jpg}
+}
+
+Abstract	
 @INPROCEEDINGS{mambavisiontsm,
   author={Seung Woo Kwak and Sungjun Hong and Sangyun Lee},
   booktitle={2025 24th International Conference on Electronics, Information, and Communication (ICEIC)}, 
