--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{deepcampus,
-title = {Making TSM better: Preserving foundational philosophy for efficient action recognition},
+title = {DeepCampus: A Campus Tour Mobile Application Using Deep Learning-Based Vision Technologies},
 journal = {The Transactions of the Korean Institute of Electrical Engineers},
 volume = {74},
 number = {1},
