--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,24 @@
 ---
 ---
 
+@article{vssmfpn,
+title = {Feature Refinement With Vision State Space Modules for Tiny Object Detection},
+journal = {Journal of Institute of Control, Robotics and Systems},
+volume = {31},
+number = {7},
+pages = {797-801},
+year = {2025},
+issn = {1976-5622},
+doi = {https://doi.org/10.5302/J.ICROS.2025.25.0119},
+author = {Sangyun Lee},
+keywords = {tiny object detection, feature pyramid network, vision state space model, mamba},
+abstract = {Tiny object detection (TOD) plays a vital role in robotics and control systems, particularly in applications such as dronebased surveillance, autonomous navigation, and intelligent monitoring. Detecting extremely small objects in aerial imagery poses significant challenges due to limited spatial detail and insufficient contextual information. While feature pyramid networks (FPNs) have proven effective in handling multi-scale features, conventional FPN-based approaches often suffer from reduced spatial precision and semantic richness, factors critical for reliable tiny object detection. To address these limitations, we propose an enhanced FPN architecture that integrates deformable convolution (DeformConv) and vision state space modules (VSSM). DeformConv replaces standard fixed-kernel convolutions in the lateral connections, enabling adaptive focus on sparse spatial locations to better capture geometric variations and fine-grained spatial features. In parallel, VSSM modules are incorporated into the top-down pathway to model long-range contextual dependencies, thereby mitigating the semantic information loss typically encountered in traditional FPNs. Experiments conducted on the VisDrone2019 and AI-TOD v2 datasets demonstrate that the proposed architecture consistently outperforms conventional FPN-based detectors, validating the robustness and effectiveness of our feature refinement strategy for tiny object detection.},
+html={https://doi.org/10.5302/J.ICROS.2025.25.0119},
+bibtex_show={true},
+selected={true},
+preview={vssmfpn.jpg}
+}
+
 @article{deepcampus,
 title = {DeepCampus: A Campus Tour Mobile Application Using Deep Learning-Based Vision Technologies},
 journal = {The Transactions of the Korean Institute of Electrical Engineers},
@@ -10,7 +28,6 @@ pages = {127-134},
 year = {2025},
 issn = {1975-8359},
 doi = {https://doi.org/10.5370/KIEE.2025.74.1.127},
-url = {https://www.sciencedirect.com/science/article/pii/S2405959523001625},
 author = {Mujae Park and Yun A Kim and Heeju Cha and Sangyun Lee},
 keywords = {Campus tour, Mobile application, Place recognition, Generative models, Commemorative photo},
 abstract = {This study proposes a campus tour mobile application called DeepCampus that leverages deep learning-based vision technologies to enhance user engagement and interaction. The proposed application introduces two core features: a photo mission, where users take photos at designated campus locations, and a commemorative photo creation function that transforms these photos into character-based styles. The photo mission relies on a CNN-based place recognition model, trained on a custom-built campus dataset, to verify mission completion. The commemorative photo creation function uses a diffusion model to generate personalized, stylized photos, providing users with unique records of their campus experience. By integrating place recognition and generative models, the application encourages active exploration. The effectiveness of the proposed system is validated through experiments on the custom dataset, demonstrating its technical reliability and potential to enhance campus tours.},
