--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,38 +20,37 @@ preview={vssmfpn.jpg}
 }
 
 @article{deepcampus,
-title = {DeepCampus: A Campus Tour Mobile Application Using Deep Learning-Based Vision Technologies},
-journal = {The Transactions of the Korean Institute of Electrical Engineers},
-volume = {74},
-number = {1},
-pages = {127-134},
-year = {2025},
-issn = {1975-8359},
-doi = {https://doi.org/10.5370/KIEE.2025.74.1.127},
-author = {Mujae Park and Yun A Kim and Heeju Cha and Sangyun Lee},
-keywords = {Campus tour, Mobile application, Place recognition, Generative models, Commemorative photo},
-abstract = {This study proposes a campus tour mobile application called DeepCampus that leverages deep learning-based vision technologies to enhance user engagement and interaction. The proposed application introduces two core features: a photo mission, where users take photos at designated campus locations, and a commemorative photo creation function that transforms these photos into character-based styles. The photo mission relies on a CNN-based place recognition model, trained on a custom-built campus dataset, to verify mission completion. The commemorative photo creation function uses a diffusion model to generate personalized, stylized photos, providing users with unique records of their campus experience. By integrating place recognition and generative models, the application encourages active exploration. The effectiveness of the proposed system is validated through experiments on the custom dataset, demonstrating its technical reliability and potential to enhance campus tours.},
-html={https://doi.org/10.5370/KIEE.2025.74.1.127},
-bibtex_show={true},
-selected={true},
-preview={deepcampus.jpg}
+  title = {DeepCampus: A Campus Tour Mobile Application Using Deep Learning-Based Vision Technologies},
+  journal = {The Transactions of the Korean Institute of Electrical Engineers},
+  volume = {74},
+  number = {1},
+  pages = {127-134},
+  year = {2025},
+  issn = {1975-8359},
+  doi = {https://doi.org/10.5370/KIEE.2025.74.1.127},
+  author = {Mujae Park and Yun A Kim and Heeju Cha and Sangyun Lee},
+  keywords = {Campus tour, Mobile application, Place recognition, Generative models, Commemorative photo},
+  abstract = {This study proposes a campus tour mobile application called DeepCampus that leverages deep learning-based vision technologies to enhance user engagement and interaction. The proposed application introduces two core features: a photo mission, where users take photos at designated campus locations, and a commemorative photo creation function that transforms these photos into character-based styles. The photo mission relies on a CNN-based place recognition model, trained on a custom-built campus dataset, to verify mission completion. The commemorative photo creation function uses a diffusion model to generate personalized, stylized photos, providing users with unique records of their campus experience. By integrating place recognition and generative models, the application encourages active exploration. The effectiveness of the proposed system is validated through experiments on the custom dataset, demonstrating its technical reliability and potential to enhance campus tours.},
+  html={https://doi.org/10.5370/KIEE.2025.74.1.127},
+  bibtex_show={true},
+  selected={true},
+  preview={deepcampus.jpg}
 }
 
-Abstract	
 @INPROCEEDINGS{mambavisiontsm,
-  author={Seung Woo Kwak and Sungjun Hong and Sangyun Lee},
-  booktitle={2025 24th International Conference on Electronics, Information, and Communication (ICEIC)}, 
-  title={Making MambaVision Temporal: Leveraging TSM for Efficient Video Understanding}, 
+  author={Kwak, Seung Woo and Hong, Sungjun and Lee, Sangyun},
+  booktitle={2025 International Conference on Electronics, Information, and Communication (ICEIC)}, 
+  title={Making Mamba Vision Temporal: Leveraging TSM for Efficient Video Understanding}, 
   year={2025},
   volume={},
   number={},
-  pages={},
+  pages={1-3},
+  keywords={Computational modeling;Computer architecture;Transformers;Explosions;Computational efficiency;Complexity theory;Convolutional neural networks;Optimization;MambaVision;Temporal Shift Module (TSM);Video Understanding;Action Recognition;Hybrid Models},
   abstract={},
-  keywords={},
-  doi={},
+  doi={https://doi.org/10.1109/ICEIC64972.2025.10879687}
   ISSN={},
   month={Jan},
-  html={},
+  html={https://doi.org/10.1109/ICEIC64972.2025.10879687},
   bibtex_show={true},
   preview={mambavisiontsm.png}
 }
