--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@ abstract = {Tiny object detection (TOD) plays a vital role in robotics and contr
 html={https://doi.org/10.5302/J.ICROS.2025.25.0119},
 bibtex_show={true},
 selected={true},
-preview={vssmfpn.jpg}
+preview={vssmfpn.png}
 }
 
 @article{deepcampus,
