Update bibliography with new research papers
Added new articles and conference papers related to StoneGAT and MambaVision.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,46 @@
 ---
 ---
 
+@article{stonegat_ijcas,
+  author  = {Soeun Chun and Seokjun Song and Doyeop Lee and Sangyun Lee},
+  title   = {StoneGAT: A Robust Fall Detection Framework via Skeleton-Aware Feature Learning on Graph Attention Networks},
+  journal = {International Journal of Control, Automation, and Systems},
+  year    = {2025},
+  issn    = {1598-6446},
+  publisher = {The International Journal of Control, Automation, and Systems},
+}
+
+@INPROCEEDINGS{stonegat_iccas,
+  author={Soeun Chun and Seokjun Song and Doyeop Lee and Sangyun Lee},
+  booktitle={2025 25th International Conference on Control, Automation and Systems (ICCAS)}, 
+  title={StoneGAT: Skeleton-aware Graph Attention Networks for Robust Fall Detection from Single-frame Poses}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={},
+  keywords={},
+  doi={}
+}
+
+
+@INPROCEEDINGS{mambavisiontsm,
+  author={Soeun Chun and Seokjun Song and Doyeop Lee and Sangyun Lee},
+  booktitle={2025 24th International Conference on Electronics, Information, and Communication (ICEIC)}, 
+  title={Making MambaVision Temporal: Leveraging TSM for Efficient Video Understanding}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={},
+  abstract={},
+  keywords={},
+  doi={},
+  ISSN={},
+  month={Jan},
+  html={},
+  bibtex_show={true},
+  preview={mambavisiontsm.png}
+}
+
 @article{vssmfpn,
 title = {Feature Refinement With Vision State Space Modules for Tiny Object Detection},
 journal = {Journal of Institute of Control, Robotics and Systems},
