--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,25 +22,6 @@
   doi={}
 }
 
-
-@INPROCEEDINGS{mambavisiontsm,
-  author={Soeun Chun and Seokjun Song and Doyeop Lee and Sangyun Lee},
-  booktitle={2025 24th International Conference on Electronics, Information, and Communication (ICEIC)}, 
-  title={Making MambaVision Temporal: Leveraging TSM for Efficient Video Understanding}, 
-  year={2025},
-  volume={},
-  number={},
-  pages={},
-  abstract={},
-  keywords={},
-  doi={},
-  ISSN={},
-  month={Jan},
-  html={},
-  bibtex_show={true},
-  preview={mambavisiontsm.png}
-}
-
 @article{vssmfpn,
 title = {Feature Refinement With Vision State Space Modules for Tiny Object Detection},
 journal = {Journal of Institute of Control, Robotics and Systems},
@@ -78,19 +59,19 @@ preview={vssmfpn.png}
 }
 
 @INPROCEEDINGS{mambavisiontsm,
-  author={Seung Woo Kwak and Sungjun Hong and Sangyun Lee},
-  booktitle={2025 24th International Conference on Electronics, Information, and Communication (ICEIC)}, 
-  title={Making MambaVision Temporal: Leveraging TSM for Efficient Video Understanding}, 
+  author={Kwak, Seung Woo and Hong, Sungjun and Lee, Sangyun},
+  booktitle={2025 International Conference on Electronics, Information, and Communication (ICEIC)}, 
+  title={Making Mamba Vision Temporal: Leveraging TSM for Efficient Video Understanding}, 
   year={2025},
   volume={},
   number={},
-  pages={},
-  abstract={},
-  keywords={},
-  doi={},
-  ISSN={},
+  pages={1-3},
+  abstract={Transformer and Mamba-based models have shown promising results in field of video understanding. However, their excessive complexity often leads to the problem of computational overhead and memory explosion. To address this issue, we propose a novel model called Mamba VisionTSM, which integrates the MambaVision architecture with the Temporal Shift Module (TSM). TSM has been effectively used to enable temporal modeling in 2D CNN models. In this work, we extend its application to the hybrid Mamba Vision model, allowing it to efficiently process temporal information while retaining the long-range spatial dependency capabilities of Mamba Vision. Through experimental results on the Something-Something V2 dataset, we demonstrate that our approach achieves comparable or superior performance compared to existing Transformer-based approaches in action recognition, highlighting its potential for broader video understanding tasks.},
+  keywords={Computational modeling;Computer architecture;Transformers;Explosions;Computational efficiency;Complexity theory;Convolutional neural networks;Optimization;MambaVision;Temporal Shift Module (TSM);Video Understanding;Action Recognition;Hybrid Models},
+  doi={10.1109/ICEIC64972.2025.10879687},
+  html={10.1109/ICEIC64972.2025.10879687},
+  ISSN={2767-7699},
   month={Jan},
-  html={},
   bibtex_show={true},
   preview={mambavisiontsm.png}
 }
