Add 'selected' field to paper entry in bibliography
Added 'selected' field to a bibliography entry.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   year    = {2025},
   issn    = {1598-6446},
   publisher = {The International Journal of Control, Automation, and Systems},
+  selected={true}
 }
 
 @INPROCEEDINGS{stonegat_iccas,
